--- a/backend-src/UzonMailDesktop/App.xaml
+++ b/backend-src/UzonMailDesktop/App.xaml
@@ -2,8 +2,19 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:UZonMailDesktop"
-             StartupUri="MainWindow.xaml">
+             xmlns:s="https://github.com/canton7/Stylet">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <s:ApplicationLoader>
+                    <s:ApplicationLoader.Bootstrapper>
+                        <local:Bootstrapper />
+                    </s:ApplicationLoader.Bootstrapper>
+                </s:ApplicationLoader>
+
+                <!--托盘图标-->
+                <!--<ResourceDictionary Source="/Pages/Tray/NotifyIconResources.xaml" />-->
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
