--- a/docs/docs/.vuepress/styles/config.scss
+++ b/docs/docs/.vuepress/styles/config.scss
@@ -1,2 +1,3 @@
 // you can change config here
 $theme-color: #3eaf7c;
+$vp-font: 'Georgia, -apple-system, "Nimbus Roman No9 L", "PingFang SC", "Hiragino Sans GB", "Noto Serif SC", "Microsoft Yahei", "WenQuanYi Micro Hei", "ST Heiti", sans-serif';
