--- a/backend-src/UzonMailDesktop/App.xaml
+++ b/backend-src/UzonMailDesktop/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:UZonMailDesktop"
-             xmlns:s="https://github.com/canton7/Stylet">
+             xmlns:s="https://github.com/canton7/Stylet"
+             xmlns:pu="https://opensource.panuon.com/wpf-ui">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -14,6 +15,8 @@
 
                 <!--托盘图标-->
                 <!--<ResourceDictionary Source="/Pages/Tray/NotifyIconResources.xaml" />-->
+
+                <pu:StyleDictionary Includes="All" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
